# mac-net-repair

./: .gitignore  README.md  package.json  pnpm-lock.yaml
openspec/: project.md
openspec/changes/archive/2026-01-26-implement-network-cards/: proposal.md  tasks.md
openspec/changes/archive/2026-01-31-implement-dns-management/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-31-update-proxy-management-page/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-03-optimize-titlebar-overlay/: design.md  (+2 more)
openspec/specs/network-cards/: spec.md
openspec/specs/overlay-titlebar/: spec.md
openspec/specs/proxy-management/: spec.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: diagnostics.rs  dns.rs  mod.rs  network.rs  proxy.rs
src/components/: LogToggleButton.tsx  LogViewer.tsx  ProxyCard.tsx
src/components/layout/: Layout.tsx  PageHeader.tsx  Sidebar.tsx  index.ts
src/components/ui/: alert.tsx  button.tsx  card.tsx  dialog.tsx  index.ts  input.tsx  select.tsx  switch.tsx
src/pages/: index.ts
src/pages/diagnostics/: DiagnosticsPage.tsx  index.ts
src/pages/dns/: DnsPage.tsx  index.ts
src/pages/home/: HomePage.tsx
src/pages/network-cards/: NetworkCardsPage.tsx  index.ts
src/pages/proxy/: ProxyPage.tsx  index.ts
src/pages/reset/: ResetPage.tsx  index.ts
src/services/: index.ts  network-api.ts
src/stores/: log-store.ts  network-store.ts
src/types/: dns.ts  proxy.ts
src/utils/: platform.ts
(+10 files in other folders)
